--- a/Lab02/2.2.md
+++ b/Lab02/2.2.md
@@ -15,7 +15,7 @@ int main() {
 }
 
 char* reverse(char str1[]) {
-    static char result[50];   // ต้องใช้ static เพื่อให้ใช้ได้หลัง return
+    static char result[50];   
     int len = strlen(str1);
     int i;
 
