--- a/Lab02/2.3.md
+++ b/Lab02/2.3.md
@@ -11,7 +11,7 @@ int main() {
     for (int i = 0; i < num; i++) {
         printf("str2[%d] = %s\n", i, out[i]);
     }
-    printf("count = ")
+    printf("count = %d ", num);
     return 0;
 }
 
