Refactor printf statements for node names

--- a/Lab4/4.3.md
+++ b/Lab4/4.3.md
@@ -36,8 +36,8 @@ int main() {
 
     GoNext1(&now1);
 
-    printf("Current Node: %s\n", now1->name);
-    printf("Second Node: %s\n", now2->next->next->name);
+    printf("%s\n", now1->name);
+    printf("%s", now2->next->next->name);
 
     return 0;
 }
